@@ -1,0 +1,14 @@
+<?php
+
+namespace SimpleComplex\Utils\Exception;
+
+/**
+ * Non-unique filename (or dirname) - free to use within other packages.
+ *
+ * @see \SimpleComplex\Utils\PathFileListUnique
+ *
+ * @package SimpleComplex\Utils
+ */
+class FileNonUniqueException extends \RuntimeException
+{
+}
