@@ -5,6 +5,8 @@ namespace SimpleComplex\Utils\Exception;
 /**
  * Generic ini parse exception - free to use within other packages.
  *
+ * @see \SimpleComplex\Utils\Utils::parseIniString()
+ *
  * @package SimpleComplex\Utils
  */
 class ParseIniException extends \RuntimeException
