@@ -5,6 +5,8 @@ namespace SimpleComplex\Utils\Exception;
 /**
  * Generic JSON parse exception - free to use within other packages.
  *
+ * @see \SimpleComplex\Utils\Utils::parseJsonString()
+ *
  * @package SimpleComplex\Utils
  */
 class ParseJsonException extends \RuntimeException
