@@ -1,3 +1,8 @@
+SimpleComplex/Utils 1.x, 2018-06-17
+-----------------------------------
+- PathFileListUnique throw FileNonUniqueException to ease identification
+  of error; RuntimeException too generic.
+
 SimpleComplex/Utils 1.x, 2018-06-16
 -----------------------------------
 - PathFileList constructor allow leading dot in requireExtensions.
